# Mini-Agent

./: .gitignore  CLAUDE.md  README.md  README_CN.md  README_ZH.md  WORKFLOW_DIAGRAM.md  debug_api.py  main.py  mcp.json  pyproject.toml  system_prompt.txt  test_github_config.py  test_glm_fix.py  trigger_ci.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  test-github-config.yml
backend/: .env.example  ARCHITECTURE.md  BUG_FIX_SUMMARY.md  CONFIG_SECURITY.md  DATABASE_MIGRATION.md  DEPENDENCY_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE.md  README.md  README_INSTALLATION.md  SEARCH_AND_SKILLS_GUIDE.md  TOOLS_OPTIMIZATION.md  TROUBLESHOOTING_WINDOWS.md  migrate_database.py  requirements.txt  reset_database.py  setup-backend.bat  setup-backend.sh  test_api.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  chat.py  sessions.py
backend/app/models/: __init__.py  database.py  message.py  session.py
backend/app/schemas/: auth.py  chat.py  message.py  session.py
backend/app/services/: agent_service.py  history_service.py  workspace_service.py
backend/app/utils/: __init__.py  init_env.py
backend/data/shared_env/: allowed_packages.txt
backend/scripts/: README.md  init_shared_env.bat  init_shared_env.py  init_shared_env.sh
docs/: API_REFERENCE.md  BACKEND_WORKSPACE_DESIGN.md  CHANGELOG.md  CI_CD_GUIDE.md  CI_ERROR_TROUBLESHOOTING.md  DEVELOPMENT.md  FASTAPI_BACKEND_ARCHITECTURE.md  GITHUB_RELEASE_GUIDE.md  GITHUB_TOKEN_SETUP.md  M2_Agent_Best_Practices_CN.md  M2_Agent_Best_Practices_EN.md  PRODUCTION_GUIDE.md  PROJECT_IMPROVEMENT_PLAN.md  RELEASE_STATUS.md  RELEASE_TEMPLATE.md  ROUND117_PARAM_FILTER_IMPLEMENTATION.md
examples/: 01_basic_tools.py  02_simple_agent.py  03_session_notes.py  04_full_agent.py  05_provider_selection.py  06_tool_schema_demo.py  README.md  README_EN.md  multi_agent_demo.py
mini_agent/: __init__.py  agent.py  cli.py  config-example.yaml  config.py  llm.py  logger.py  retry.py
mini_agent/acp/: README.md  __init__.py  agent.py  schema_fix.py  server.py
mini_agent/llm/: __init__.py  llm_wrapper.py  openai_client.py
mini_agent/llm/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
mini_agent/orchestration/: __init__.py  executor.py  orchestrator.py  result_aggregator.py  task_router.py
mini_agent/orchestration/prompts/: __init__.py  agent_prompts.py  coordinator_prompts.py
mini_agent/skills/algorithmic-art/templates/: viewer.html
mini_agent/skills/document-skills/docx/ooxml/scripts/validation/: redlining.py
mini_agent/skills/document-skills/pptx/ooxml/scripts/validation/: redlining.py
mini_agent/skills/mcp-builder/scripts/: evaluation.py
mini_agent/skills/slack-gif-creator/core/: typography.py  visual_effects.py
mini_agent/tools/: __init__.py  base.py  bash_tool.py  communication.py  file_tools.py  glm_search_tool.py  mcp_loader.py  note_tool.py  orchestration.py  skill_loader.py  skill_tool.py
scripts/: setup-config.ps1  setup-config.sh
tests/: test_agent.py  test_agent_interrupts.py  test_bash_tool.py  test_git_mcp.py  test_integration.py  test_llm.py  test_llm_clients.py  test_markdown_links.py  test_mcp.py  test_note_tool.py  test_openai_provider.py  test_session_integration.py  test_skill_loader.py  test_skill_tool.py  test_terminal_utils.py  test_tool_schema.py  test_tools.py
tests/orchestration/: test_orchestrator.py
ye_linghua/: __init__.py  cli.py  config.py  personality_loader.py  web_config.py
ye_linghua/config/: config-example.yaml  personality.yaml  prompts.yaml
ye_linghua/llm/: openai_client.py
