[project]
name = "mini-agent"
version = "0.6.0"
description = "Mini-Agent: Minimal yet professional AI agent with multi-agent orchestration support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mini Agent Team", email = "team@mini-agent.dev"}
]
license = {text = "MIT"}
keywords = [
    "ai", "agent", "llm", "anthropic", "openai", "mcp", "multi-agent",
    "orchestration", "automation", "gpt", "claude"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "prompt-toolkit>=3.0.0",
    "anthropic>=0.39.0",
    "openai>=1.57.4",
    "agent-client-protocol>=0.6.0",
    "psutil>=5.9.0",
]

[project.scripts]
mini-agent = "mini_agent.cli:main"
mini-agent-acp = "mini_agent.acp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "safety>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/zhaofei0923/Mini-Agent"
Repository = "https://github.com/zhaofei0923/Mini-Agent"
Issues = "https://github.com/zhaofei0923/Mini-Agent/issues"
Changelog = "https://github.com/zhaofei0923/Mini-Agent/blob/main/docs/CHANGELOG.md"
Documentation = "https://github.com/zhaofei0923/Mini-Agent/blob/main/docs/API_REFERENCE.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mini_agent*"]
exclude = ["tests*"]

# Include skills directory (git submodule) as package data
# After moving submodule to mini_agent/skills
[tool.setuptools.package-data]
mini_agent = ["skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "workspace/.pytest_cache"
asyncio_mode = "auto"

[tool.pylint.messages_control]
# Disable warnings for Tool.execute method signature differences
# We intentionally use explicit parameters in subclasses for better type hints
disable = [
    "arguments-differ",  # Allow subclasses to have different parameter signatures
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
